[package]
name = "compiler"
version = "0.1.0"
authors = ["Daniel Hines <d4hines@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.compile]
path = "./src/compile_ddlog"

[dependencies.value]
path = "./src/compile_ddlog/value"

[dependencies.types]
path = "./src/compile_ddlog/types"

[dependencies.differential_datalog]
path = "./src/compile_ddlog/differential_datalog"

[dependencies]
serde = "1.0"
serde_json = "1.0"
libc = "0.2"
